--- a/index.html
+++ b/index.html
@@ -151,65 +151,99 @@
     <!-- Carousel End -->
 
 
-    <!-- Facts Start -->
-    <!-- <div class="container-fluid facts py-5 pt-lg-0">
-        <div class="container py-5 pt-lg-0">
-            <div class="row gx-0">
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="bg-white shadow d-flex align-items-center h-100 p-4" style="min-height: 150px;">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-lg-square bg-primary">
-                                <i class="fa fa-car text-white"></i>
+    <!-- Testimonial Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h6 class="text-primary text-uppercase mb-2">Our Latest</h6>
+                <h1 class="display-6 mb-4">New Launch Products</h1>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="owl-carousel testimonial-carousel">
+                        <div class="row">
+                            <div class="col-lg-5" data-wow-delay="0.1s">
+                                <div class="product_img_"><img class="" src="img/new_launch_product_1.jpg" alt=""></div>
                             </div>
-                            <div class="ps-4">
-                                <h5>Easy Driving Learn </h5>
-                                <span>Clita erat ipsum lorem sit sed stet duo justo erat amet</span>
+                            <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                                <div class="h-100 product_items">
+                                    <div class="prd_heading_new_launch">Endoscopy Camera</div>
+                                    <div class="row g-2 mb-4 pb-2">
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>High Resolution CMOS Sensor with High speed Digital Signal Processing.
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>High intensity super bright MCD LED Light with color temperature of 7000° K
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>Corner to corner uniform brightness for natural reproduction of tissue color and tone
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>E-flip and mirror image function for exact diagnosis
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>Images can be displayed, marked, highlighted, captured, stored, and printed in real time
+                                        </div>                                       
+                                    </div>
+                                    <div class="row g-4">
+                                        <div class="col-sm-6">
+                                            <a class="d-inline-flex align-items-center btn btn-outline-primary border-2 p-2" href="#">
+                                                <span class="px-3">Know More...</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="bg-white shadow d-flex align-items-center h-100 p-4" style="min-height: 150px;">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-lg-square bg-primary">
-                                <i class="fa fa-users text-white"></i>
+                        <div class="row">
+                            <div class="col-lg-5" data-wow-delay="0.1s">
+                                <div class="product_img_"><img class="" src="img/about-1.jpg" alt=""></div>
                             </div>
-                            <div class="ps-4">
-                                <h5>National Instructor</h5>
-                                <span>Clita erat ipsum lorem sit sed stet duo justo erat amet</span>
+                            <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
+                                <div class="h-100 product_items">
+                                    <div class="prd_heading_new_launch">Digital Video Colposcope 222 DX</div>
+                                    <div class="row g-2 mb-4 pb-2">
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>High Resolution CMOS Sensor with High speed Digital Signal Processing.
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>High intensity super bright MCD LED Light with color temperature of 7000° K
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>Corner to corner uniform brightness for natural reproduction of tissue color and tone
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>E-flip and mirror image function for exact diagnosis
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <i class="fa fa-check text-primary me-2"></i>Images can be displayed, marked, highlighted, captured, stored, and printed in real time
+                                        </div>                                       
+                                    </div>
+                                    <div class="row g-4">
+                                        <div class="col-sm-6">
+                                            <a class="d-inline-flex align-items-center btn btn-outline-primary border-2 p-2" href="#">
+                                                <span class="px-3">Know More...</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="bg-white shadow d-flex align-items-center h-100 p-4" style="min-height: 150px;">
-                        <div class="d-flex">
-                            <div class="flex-shrink-0 btn-lg-square bg-primary">
-                                <i class="fa fa-file-alt text-white"></i>
-                            </div>
-                            <div class="ps-4">
-                                <h5>Get licence</h5>
-                                <span>Clita erat ipsum lorem sit sed stet duo justo erat amet</span>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
-    </div> -->
-    <!-- Facts End -->
+    </div>
+    <!-- Testimonial End -->
 
 
     <!-- About Start -->
+    <section id="about_section">
     <div class="container-xxl py-6">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 600px;">
-                        <img class="position-absolute " src="img/about-1.jpg" alt="" style="object-fit: cover;">
-                        <img class="position-absolute top-0 start-0 bg-white pe-3 pb-3" src="img/about-2.jpg" alt="" style="width: 200px; height: 200px;">
-                    </div>
-                </div>
+                
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <h6 class="text-primary text-uppercase mb-2">About Us</h6>
@@ -244,9 +278,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 600px;">
+                        <img class="position-absolute " src="img/about-1.jpg" alt="" style="object-fit: cover;">
+                        <img class="position-absolute top-0 start-0 bg-white pe-3 pb-3" src="img/about-2.jpg" alt="" style="width: 200px; height: 200px;">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    </section>
     <!-- About End -->
 
 
@@ -361,6 +402,39 @@
         </div>
     </div>
     <!-- Courses End -->
+
+    <!--Application Start-->
+    <div class="container">
+        <div class="row g-5">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h6 class="text-primary text-uppercase mb-2">Our</h6>
+                <h1 class="display-6 mb-4">Applications</h1>
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col-sm-12">
+                <ul class="department_list_">
+                    <li id="department_1" class="active"><img src="img/application_icon_1.png" alt="" /> Urology Dept.</li>
+                    <li id="department_2"><img src="img/application_icon_2.png" alt="" /> E.N.T Dept.</li>
+                    <li id="department_3"><img src="img/application_icon_3.png" alt="" /> Gynecology Dept.</li>
+                    <li id="department_4"><img src="img/application_icon_4.png" alt="" /> General Dept.</li>
+                </ul>
+                <div class="department_img_sec active" id="department_1_img">
+                    <img src="img/urology-dept.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="department_img_sec" id="department_2_img">
+                    <img src="img/ent-dept.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="department_img_sec" id="department_3_img">
+                    <img src="img/gynecology-dept.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="department_img_sec" id="department_4_img">
+                    <img src="img/general-dept.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Application End-->
 
 
     <!-- Features Start -->
